Issue #1: Added Chromium

--- a/default_message.html
+++ b/default_message.html
@@ -19,6 +19,7 @@
 	Please consider accessing this site with another browser:
 
 	<ul>
+		<li> <a href="http://www.chromium.org/">Chromium</a> </li>
 		<li> <a href="https://www.google.com/intl/en/chrome/browser/">Chrome</a> </li>
 		<li> <a href="http://windows.microsoft.com/en-us/internet-explorer/download-ie">Internet Explorer</a> </li>
 		<li> <a href="http://www.opera.com/">Opera</a> </li>
